--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,135 @@
-httplib2
-pandas
-datetime
-dj-database-url==0.4.1
-Flask
-Django==1.11
-gunicorn==19.6.0
-psycopg2==2.8.1
-whitenoise==3.3.0
-requests==2.9.1
-asyncio 
-telepot
-python-telegram-bot
-telebot
-pyTelegramBotAPI
-matplotlib
-numpy
-Flask-Cors==3.0.8
-lightgbm==2.2.3
-scikit-learn
+absl-py==0.10.0
+argon2-cffi==20.1.0
+astor==0.8.1
+attrs==20.1.0
+autopep8==1.5.4
+backcall==0.2.0
+bleach==3.1.5
+boto==2.49.0
+boto3==1.14.47
+botocore==1.17.47
+breadability==0.1.20
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.2
+chardet==3.0.4
+click==7.1.2
+cloudpickle==1.5.0
+colorama==0.4.3
+cycler==0.10.0
+Cython==0.29.14
+decorator==4.4.2
+defusedxml==0.6.0
+docopt==0.6.2
+docutils==0.15.2
+entrypoints==0.3
+Flask==1.1.2
+future==0.18.2
+gast==0.4.0
+gensim==3.8.3
+google-api-core==1.22.1
+google-auth==1.20.1
+google-auth-oauthlib==0.4.1
+google-cloud-bigquery==1.27.2
+google-cloud-core==1.4.1
+google-crc32c==0.1.0
+google-resumable-media==0.7.1
+googleapis-common-protos==1.52.0
+grpcio==1.31.0
+h5py==2.10.0
+hyperopt==0.2.4
+idna==2.10
+imbalanced-learn==0.7.0
+imblearn==0.0
+ipykernel==5.3.4
+ipython==7.17.0
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+jmespath==0.10.0
+joblib==0.16.0
+jsonschema==3.2.0
+jupyter-client==6.1.6
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.3
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterthemes==0.20.0
+Keras==2.4.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+langdetect==1.0.8
+lesscpy==0.14.0
+lightgbm==2.3.1
+lxml==4.5.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.1
+mistune==0.8.4
+mlxtend==0.17.3
+nbconvert==5.6.1
+nbformat==5.0.7
+networkx==2.4
+nltk==3.5
+notebook==6.1.3
+numpy==1.19.1
+oauthlib==3.1.0
+packaging==20.4
+pandas==1.1.1
+pandas-gbq==0.13.2
+pandocfilters==1.4.2
+parso==0.7.1
+pickleshare==0.7.5
+Pillow==7.2.0
+plotly==4.9.0
+ply==3.11
+prometheus-client==0.8.0
+prompt-toolkit==3.0.6
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycountry==20.7.3
+pycparser==2.20
+pydata-google-auth==1.1.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+pywin32==228
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.2
+regex==2020.7.14
+requests==2.24.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.6
+s3transfer==0.3.3
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.10.1
+Send2Trash==1.5.0
+six==1.15.0
+smart-open==2.1.0
+stop-words==2018.7.23
+sumy==0.8.1
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+threadpoolctl==2.1.0
+toml==0.10.1
+tornado==6.0.4
+tqdm==4.48.2
+traitlets==4.3.3
+urllib3==1.25.10
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
