--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
-sumy==0.8.1
-numpy==1.19.1
-requests==2.24.0
-lightgbm==2.3.1
 Flask==1.1.2
-stop_words==2018.7.23
 nltk==3.5
 pandas==1.1.1
-scikit_learn==0.23.2
+sumy==0.8.1
+stop_words==2018.7.23
+httplib2
+datetime
+dj-database-url==0.4.1
+Django==1.11
+gunicorn==19.6.0
+psycopg2==2.8.1
+whitenoise==3.3.0
+requests==2.9.1
+asyncio 
+telepot
+python-telegram-bot
+telebot
+pyTelegramBotAPI
+matplotlib
+numpy
+Flask-Cors==3.0.8
+lightgbm==2.2.3
+scikit-learn
